--- a/style.css
+++ b/style.css
@@ -120,12 +120,17 @@ body {
 }
 
 .navigation__sublist {
+    z-index: 2;
     position: absolute;
     background-color: #fff;
     width: 164px;
     top: 51px;
     height: 135px;
     border-radius: 13.7px;
+}
+
+.sublist__item:hover {
+    background-color: #F6F6F6;
 }
 
 .sublist__item {
@@ -247,6 +252,11 @@ body {
     font-weight: 400;
     font-size: 15.09px;
     line-height: 34.82px;
+    transition: 0.3s;
+}
+
+.material-symbols-outlined-transform {
+    transform: rotate(180deg);
 }
 
 .company-logo {
@@ -850,7 +860,10 @@ body {
     align-items: center;
     justify-content: center;
     gap: 5.03px;
+    cursor: pointer;
+    transition: background 0.3s;
 }
+
 
 .catalog__bottom {
     padding-top: 49.48px;
@@ -1159,6 +1172,7 @@ body {
     gap: 130px;
     display: flex;
     justify-content: space-around;
+    padding-bottom: 52.84px;
 }
 
 .form__title {
@@ -1278,7 +1292,10 @@ body {
 }
 
 .prices_tabs {
+    display: flex;
     padding-top: 51.31px;
+    flex-direction: column;
+    gap: 13px;
 }
 
 .tab__header {
@@ -1291,4 +1308,112 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 24.17px 37.25px 28.45px 36.24px;
+}
+
+.select svg {
+    transition: 0.3s;
+}
+
+.select-transform {
+    transform: rotate(180deg);
+}
+
+.catalog__dropdown {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.filter__dropdown-menu {
+    display: none;
+    z-index: 2;
+    position: absolute;
+    top: 58px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 164px;
+    height: 135.85px;
+    border-radius: 13.7px;
+    border: 1px solid #000000;
+    background-color: #ffffff;
+}
+
+.menu-active {
+    display: flex;
+}
+
+.dropdown__item {
+    font-weight: 600;
+    font-size: 17.23px;
+    line-height: 22.06px;
+    padding-left: 18.12px;
+}
+
+.dropdown__item-active {
+    background-color: #F6F6F6;
+}
+
+.dropdown__item:hover {
+    background-color: #F6F6F6;
+}
+
+.tabs__tab {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.list__top {
+    display: flex;
+    background-color: #F6F6F6;
+    border-top-right-radius: 18.12px;
+    border-top-left-radius: 18.12px;
+    font-weight: 600;
+    font-size: 15.13px;
+    line-height: 21.11px;
+    color: #0F1419;
+    justify-content: space-between;
+    align-items: center;
+    padding: 22px 23.28px;
+}
+
+.list__bottom {
+    font-weight: 400;
+    font-size: 15.13px;
+    line-height: 22.11px;
+}
+
+.list__bottom-options {
+    padding: 0 23.28px;
+    border: 1px solid #E8E8E8;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.options_item {
+    display: flex;
+    align-items: center;
+    width: 270.63px;
+    height: 88px;
+}
+
+.chars_list-item {
+    display: flex;
+    align-items: center;
+    width: 270.57px;
+    height: 88px;
+}
+
+.tab__list {
+    display: none;
+}
+
+.tab__header svg {
+    transition: 0.3s;
+}
+
+.chars_list-active {
+    display: block;
 }
